--- a/Single price grid component/sass/main.scss
+++ b/Single price grid component/sass/main.scss
@@ -68,6 +68,10 @@ body {
 
 	display: flex;
 	flex-direction: column;
+
+	@media only screen and (max-width: $breakpoint-sm) {
+		border-radius: 0;
+	}
 }
 
 .header {
@@ -139,7 +143,7 @@ body {
 		padding: 1.6rem;
 		border-radius: 0.8rem;
 		box-shadow: 0 0.5rem 0.5rem 0.2rem rgba(0, 0, 0, 0.1);
-
+		
 		background: $brigt-yellow;
 		color: white;
 		font-size: 1.1em;
@@ -148,7 +152,8 @@ body {
 
 		transition: all 200ms;
 
-		&:hover {
+		&:hover,
+		&:focus {
 			background: $darker-yellow;
 			box-shadow: 0 0.5rem 1rem 0.5rem rgba(0, 0, 0, 0.1);
 			transition: transform 0.2s;
